# rusty_timer

./: .gitignore  Cargo.toml  README.md  template.html  timer.html
src/: lib.rs  main.rs
